--- a/index.html
+++ b/index.html
@@ -4,8 +4,184 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>EduPro – Learn Anytime</title>
   </head>
   <body>
-    <h1 class="text-3xl">Hello world!</h1>
+    <!-- HEADER -->
+    <header class="text-gray-600 body-font bg-gray-100">
+      <div
+        class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
+      >
+        <a
+          class="flex title-font font-medium items-center text-indigo-600 mb-4 md:mb-0"
+        >
+          <svg
+            class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+            <path
+              d="M12 14l6.16-3.422A12.083 12.083 0 0112 20.055 12.083 12.083 0 015.84 10.578L12 14z"
+            ></path>
+          </svg>
+          <span class="ml-3 text-xl">EduPro</span>
+        </a>
+        <nav
+          class="md:ml-auto flex flex-wrap items-center text-base justify-center"
+        >
+          <a class="mr-5 hover:text-indigo-600">Home</a>
+          <a class="mr-5 hover:text-indigo-600">Courses</a>
+          <a class="mr-5 hover:text-indigo-600">About</a>
+          <a class="mr-5 hover:text-indigo-600">Contact</a>
+        </nav>
+        <button
+          class="inline-flex items-center bg-indigo-500 text-white border-0 py-2 px-4 rounded hover:bg-indigo-600"
+        >
+          Get Started
+        </button>
+      </div>
+    </header>
+
+    <!-- HERO -->
+    <section class="text-gray-600 body-font pb-1">
+      <div
+        class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center pb-1"
+      >
+        <div
+          class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start pb-1 md:text-left mb-16 md:mb-0 items-center text-center"
+        >
+          <h1
+            class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"
+          >
+            Learn New Skills <br class="hidden lg:inline-block" />
+            Anytime, Anywhere
+          </h1>
+          <p class="mb-8 leading-relaxed">
+            Join thousands of students learning coding, design, marketing, and
+            more from industry experts.
+          </p>
+          <div class="flex justify-center">
+            <button
+              class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 rounded hover:bg-indigo-600"
+            >
+              Browse Courses
+            </button>
+            <button
+              class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 rounded hover:bg-gray-300"
+            >
+              Learn More
+            </button>
+          </div>
+        </div>
+        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+          <img
+            class="object-cover object-center rounded"
+            src="https://img.freepik.com/free-vector/online-learning-concept-illustration_114360-534.jpg"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section class="text-gray-600 body-font bg-gray-100">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="text-center mb-20">
+          <h1
+            class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4"
+          >
+            Why Choose EduPro?
+          </h1>
+        </div>
+        <div class="flex flex-wrap -m-4">
+          <div class="p-4 md:w-1/3">
+            <div
+              class="flex rounded-lg h-full bg-white p-8 flex-col text-center"
+            >
+              <h2 class="text-lg title-font font-medium text-gray-900 mb-3">
+                Expert Instructors
+              </h2>
+              <p class="leading-relaxed text-base">
+                Learn from industry professionals with real-world experience.
+              </p>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/3">
+            <div
+              class="flex rounded-lg h-full bg-white p-8 flex-col text-center"
+            >
+              <h2 class="text-lg title-font font-medium text-gray-900 mb-3">
+                Flexible Learning
+              </h2>
+              <p class="leading-relaxed text-base">
+                Study at your own pace with lifetime access to courses.
+              </p>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/3">
+            <div
+              class="flex rounded-lg h-full bg-white p-8 flex-col text-center"
+            >
+              <h2 class="text-lg title-font font-medium text-gray-900 mb-3">
+                Certifications
+              </h2>
+              <p class="leading-relaxed text-base">
+                Earn certificates to boost your resume and career.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TESTIMONIALS -->
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-12">
+          <h1 class="text-2xl font-medium title-font text-gray-900">
+            What Students Say
+          </h1>
+        </div>
+        <div class="flex flex-wrap -m-4">
+          <div class="p-4 md:w-1/2">
+            <div class="h-full bg-gray-100 p-8 rounded">
+              <p class="leading-relaxed mb-6">
+                EduPro helped me switch my career into web development in just 6
+                months!
+              </p>
+              <h2 class="text-gray-900 font-medium">Aman Patel</h2>
+            </div>
+          </div>
+          <div class="p-4 md:w-1/2">
+            <div class="h-full bg-gray-100 p-8 rounded">
+              <p class="leading-relaxed mb-6">
+                High-quality courses and amazing instructors. Highly
+                recommended!
+              </p>
+              <h2 class="text-gray-900 font-medium">Neha Sharma</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="text-gray-600 body-font bg-gray-900 text-gray-400">
+      <div
+        class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col"
+      >
+        <p
+          class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-700"
+        >
+          © 2025 EduPro — All Rights Reserved
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
